deploy/examples/minikube.loc/daemonset-npm-proxy-cache.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: minienv-npm-proxy-cache-daemonset
  name: minienv-npm-proxy-cache-daemonset
spec:
  selector:
    matchLabels:
      name: minienv-npm-proxy-cache
  template:
    metadata:
      labels:
        name: minienv-npm-proxy-cache
    spec:
      hostNetwork: true
      containers:
      - name: minienv-npm-proxy-cache
        image: minienv/minienv-npm-proxy-cache:latest
        volumeMounts:
          - mountPath: "/cache"
            name: npm-proxy-cache-volume
        ports:
        - name: npm-proxy-cache
          containerPort: 5001
          hostPort: 5001
      volumes:
        - name: npm-proxy-cache-volume
          emptyDir: {}
