deploy/examples/minikube.loc/daemonset-registry.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: minienv-registry-daemonset
  name: minienv-registry-daemonset
spec:
  selector:
    matchLabels:
      name: minienv-registry
  template:
    metadata:
      labels:
        name: minienv-registry
    spec:
      hostNetwork: true
      containers:
      - name: minienv-registry
        image: minienv/minienv-registry:latest
        volumeMounts:
          - mountPath: "/var/lib/docker"
            name: minienv-registry-volume
        ports:
        - name: registry
          containerPort: 5000
          hostPort: 5000
        resources:
          limits:
            memory: "128Mi"
      volumes:
        - name: minienv-registry-volume
          emptyDir: {}
