deploy/examples/minikube.loc/deployment-api.yml
apiVersion: extensions/v1beta1
kind: Deployment 
metadata:
  name: minienv-api-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: minienv-api
    spec:
      containers:
        - name: minienv-api
          image: localhost:5000/minienv/minienv-api:0.2.0-DEV
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
