deploy/examples/minikube.loc/service-env-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: minienv-env-proxy-service
spec:
  selector:
    app: minienv-env-proxy
  ports:
    - protocol: TCP
      port: 80
      name: "env-proxy"
      targetPort: 80
  type: ClusterIP
