deploy/examples/minikube.loc/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minienv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube.loc
    http:
      paths:
      - path: /*
        backend:
          serviceName: minienv-web-service
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: minienv-api-service
          servicePort: 80
  - host: "*.minikube.loc"
    http:
      paths:
      - path: /*
        backend:
          serviceName: minienv-env-proxy-service
          servicePort: 80
